martin/src/sprites/snapshots/martin__sprites__tests__src1_1_sdf.json.snap
---
source: martin/src/sprites/mod.rs
expression: sprites.get_index()
---
{
  "another_bicycle": {
    "height": 21,
    "pixelRatio": 1,
    "width": 21,
    "x": 26,
    "y": 22,
    "sdf": true
  },
  "bear": {
    "height": 22,
    "pixelRatio": 1,
    "width": 22,
    "x": 26,
    "y": 0,
    "sdf": true
  },
  "sub/circle": {
    "height": 26,
    "pixelRatio": 1,
    "width": 26,
    "x": 0,
    "y": 0,
    "sdf": true
  }
}
