martin/src/sprites/snapshots/martin__sprites__tests__src1_2.snap
---
source: martin/src/sprites/mod.rs
assertion_line: 273
expression: png
extension: png
snapshot_kind: binary
---

