martin/src/sprites/snapshots/martin__sprites__tests__src2_1_sdf.json.snap
---
source: martin/src/sprites/mod.rs
expression: sprites.get_index()
---
{
  "bicycle": {
    "height": 21,
    "pixelRatio": 1,
    "width": 21,
    "x": 0,
    "y": 0,
    "sdf": true
  }
}
